# devbase

./: compose.yml
.devcontainer/golang-container/: Dockerfile  devcontainer.json
.devcontainer/node-container/: Dockerfile  devcontainer.json
.devcontainer/python-container/: Dockerfile  devcontainer.json
.devcontainer/terraform-container/: Dockerfile
golang-src/: go.mod  go.sum
golang-src/cmd/server/: main.go
golang-src/greet/v1/: greet.proto
node-src/tutorial/: package.json
node-src/tutorial/src/pages/: about.astro  blog.astro  index.astro
node-src/tutorial/src/styles/: global.css
node-src/violet-visual/: package.json
python-src/: .pre-commit-config.yaml  pyproject.toml
